--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -59,3 +59,11 @@
 .scrollbar-hide::-webkit-scrollbar {
   display: none;
 }
+
+.left-panel-scrollbar-hidden {
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none; /* IE 10+ */
+}
+.left-panel-scrollbar-hidden::-webkit-scrollbar {
+  display: none; /* Safari and Chrome */
+}
